--- a/.env
+++ b/.env
@@ -17,5 +17,4 @@ POSTGRES_DATABASE="verceldb"
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_PROD_URL=https://salary-app-beta.vercel.app
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
